--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,20 +1,37 @@
 footer {
-    height: 60vh;
-    padding: 2% 10%;
+    padding: 1.25rem 1.875rem;
     background: black;
     color: azure;
-    display: grid;
-    grid-template-columns: 60% 40%;
+    display: flex;
+    justify-content: space-between;
 }
 
 .container {
-    margin-top: 5%;
     display: flex;
-    justify-content: flex-start;
+    flex-wrap: wrap;
+    margin-bottom: 150px;
+}
+
+@media only screen and (max-width: 1200px) {
+    .container {
+        margin-right: 100px;
+        justify-content: space-around;
+        margin-bottom: 100px;
+    }
+}
+ 
+@media only screen and (max-width: 815px) {
+    footer {
+        flex-wrap: wrap;
+    }
+    .container {
+        margin-right: 0;
+        justify-content: space-around;
+    }
 }
 
 .colomn {
-    margin-right: 40px;
+    padding: 1.25rem;
 }
 
 h4 {
@@ -33,10 +50,10 @@ h6:hover {
 }
 
 .legal {
-    margin-bottom: 45px;
+    padding: 1.5rem 1rem;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: flex-start;
     justify-content: flex-end;
 }
 
