--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -5,7 +5,7 @@
   justify-content: space-between;
   flex-wrap: wrap;
   padding: 1rem 4.5rem;
-  background-color: #191a1b;
+  background-color: black;
   color: white;
 }
 
